# google-workspace-mcp

./: .gitignore  .mcp.json.example  LICENSE  README.es.md  README.md  pyproject.toml
google_workspace_mcp/: apps_script.py  auth.py  authorize.py  bigquery.py  calendar.py  comments.py  docs.py  docs_formatting.py  drive.py  forms.py  gmail.py  guardrails.py  looker_studio.py  server.py  sheets.py  slides.py
